# owasp-top-10-controller

web/: README.md  pyproject.toml
web/advanced_vuln_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
web/reports/: demo.json
web/scanner/: main.py
web/scanner/checks/: __init__.py  base.py  broken_auth.py  registry.py  sensitive_data.py  sql_injection.py  xss.py
web/scanner/core/: __init__.py  config.py  http_client.py  reporting.py  scanner.py
web/targets/dummy_app/: app.py
web/tests/: test_config.py
web/web/: app.py  run.py
web/web/configs/: example_explained.yaml  sample_target.yaml
web/web/reports/: scan_1763031810.json  scan_1763031863.json  scan_1763035040.json  scan_1763035077.json
web/web/static/css/: style.css
web/web/static/js/: app.js
web/web/templates/: index.html
